--- a/language/resource.language.nl_nl/strings.po
+++ b/language/resource.language.nl_nl/strings.po
@@ -4501,3 +4501,18 @@ msgstr "Spotlight Films"
 msgctxt "#31921"
 msgid "Spotlight TV"
 msgstr ""
+
+#: /1080i/Custom_1158_VideoInfo.xml
+msgctxt "#31922"
+msgid "Enable Previous/Next page buttons in Lists"
+msgstr ""
+
+#: /1080i/Includes_Object.xml
+msgctxt "#31923"
+msgid "Previous page"
+msgstr ""
+
+#: /1080i/Includes_Object.xml
+msgctxt "#31924"
+msgid "Next page"
+msgstr ""
