--- a/language/resource.language.es_es/strings.po
+++ b/language/resource.language.es_es/strings.po
@@ -4504,49 +4504,49 @@ msgstr "Destacados de Series"
 #: /1080i/Custom_1158_VideoInfo.xml
 msgctxt "#31922"
 msgid "Enable Previous/Next page buttons in Lists"
-msgstr ""
+msgstr "Habilitar botones de página Anterior/Siguiente en Listas"
 
 #: /1080i/Includes_Object.xml
 msgctxt "#31923"
 msgid "Previous page"
-msgstr ""
+msgstr "Pagina anterior"
 
 #: /1080i/Includes_Object.xml
 msgctxt "#31924"
 msgid "Next page"
-msgstr ""
+msgstr "Página siguiente"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31925"
 msgid "Enable notification shadow outside player"
-msgstr ""
+msgstr "Habilitar sombra de notificación fuera del reproductor"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31926"
 msgid "Disable Time header in Library Views"
-msgstr ""
+msgstr "Deshabilitar el encabezado de tiempo en las Vistas de Biblioteca"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31927"
 msgid "Enable notification icon for addons"
-msgstr ""
+msgstr "Habilitar icono de notificación para addons"
 
 #: /1080i/Custom_1158_VideoInfo.xml
 msgctxt "#31928"
 msgid "Configure Cast & More Details"
-msgstr ""
+msgstr "Configurar Reparto y Más Detalles"
 
 #: /1080i/Custom_1159_CastAndMoreDetails.xml
 msgctxt "#31929"
 msgid "Cast & More Details"
-msgstr ""
+msgstr "Reparto y Más Detalles"
 
 #: /1080i/Custom_1159_CastAndMoreDetails.xml
 msgctxt "#31930"
 msgid "Season flags"
-msgstr ""
+msgstr "Banderas de temporada"
 
 #: /1080i/Custom_1159_CastAndMoreDetails.xml
 msgctxt "#31931"
 msgid "Episode flags"
-msgstr ""
+msgstr "Banderas de episodio"
